--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,18 +8,26 @@ on:
   push:
     branches:
       - master
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    strategy:
+      matrix:
+        node-version: [12.x]
+
     steps:
-      -uses:actions/checkout@v1
-      -name:script deploy
-      run:|
-        chmod +x ./scripts/deploy.sh
-        bash ./scripts/deploy.sh
+      - uses: actions/checkout@v1
+      - name: 1. set environment
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: 2. install dep
+        run: |
+          rm -rf node_modules
+          npm install
+          npm run build
+      - name: 3. script deploy
+        run: |
+          chmod +x ./scripts/deploy.sh
+          bash ./scripts/deploy.sh
