--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           rm -rf node_modules
           npm install
-          npm run build
+          npm run docs:build
       - name: 3. script deploy
         run: |
           chmod +x ./scripts/deploy.sh
